--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,17 @@
 html {
   font-family: "Roboto Light", Arial;
+  width: auto;
+  height: auto;
 }
 
 body {
+  position: relative;
   background: rgba(0, 0, 0, 0.4666666667);
   display: grid;
-  height: 100vh;
+  min-height: 100vh;
   text-shadow: 0 0 2rem black, 0 0 2rem black, 0 0 2rem black;
   color: white;
+  grid-template-rows: max-content;
 }
 
 h1 {
@@ -17,11 +21,25 @@ h1 strong {
   color: #cc1133;
 }
 
+header {
+  max-height: max-content;
+}
+
+main {
+  grid-template-rows: max-content;
+}
+
 @media (max-width: 980px) {
   html {
     font-size: 18px;
   }
 }
+.resource {
+  text-decoration: underline;
+  font-style: italic;
+  color: #ffbb1d;
+}
+
 .btn {
   font-size: 2rem;
   padding: 2rem 3rem;
@@ -80,6 +98,9 @@ h1 strong {
 .banner {
   min-height: auto;
 }
+.banner__content {
+  max-width: 450px;
+}
 
 .background {
   position: absolute;
@@ -90,10 +111,15 @@ h1 strong {
 
 .calc {
   font-size: 2rem;
+  line-height: 2rem;
+  background: darkgoldenrod;
+  padding: 14px;
+  border-radius: 4px;
 }
 .calc input {
   font-size: 2rem;
   width: 10rem;
+  margin: 0.2rem 0;
 }
 .calc select {
   display: inline-grid;
@@ -101,7 +127,7 @@ h1 strong {
 }
 .calc__snoska {
   font-size: 1rem;
-  text-align: center;
+  text-align: end;
   float: right;
 }
 
