--- a/css/style.scss
+++ b/css/style.scss
@@ -28,6 +28,14 @@ main {
   grid-template-rows: max-content;
 }
 
+.rules {
+  h2, h3, ul, p {
+    margin-bottom: 2rem;
+  }
+  li {
+    margin-bottom: 1rem;
+  }
+}
 
 @media (max-width: 980px) {
   html {
